--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -49,24 +49,10 @@ picture {
 }
 
 :root {
-    --green-light: hsl(123deg, 47%, 74%);
-    --green-dark: #2e7f32;
-    --blue-light: hsl(210deg, 47%, 74%);
-    --blue-dark: #2e577f;
-    --orange-light: hsl(34deg, 93%, 77%);
-    --orange-dark: #b66a07;
-    --purple-light: hsl(231deg, 44%, 76%);
-    --purple-dark: #334084;
-    --yellow-light: hsl(54deg, 76%, 79%);
-    --yellow-dark: #afa018;
-    --brown-light: hsl(20deg, 41%, 69%);
-    --brown-dark: #68402c;
-    --red-light: hsl(0deg, 59%, 76%);
-    --red-dark: #922626;
-    --pink-light: hsl(295deg, 42%, 72%);
-    --pink-dark: #6e2f74;
-    --white-light: hsl(0deg, 0%, 100%);
-    --white-dark: #999999;
+    --gradient-one: #f49867;
+    --gradient-two: #ae67fa;
+    /*--gradient-one: #02C897;*/
+    /*--gradient-two: #00ADD8;*/
 }
 
 .orbit {
@@ -184,50 +170,34 @@ picture {
 }
 
 .orbit li:nth-child(1) {
-    --icon-bg: var(--blue-light);
-    --text-bg: var(--blue-dark);
     transform: translate(15rem, 0rem);
 }
 
 .orbit li:nth-child(2) {
-    --icon-bg: var(--green-light);
-    --text-bg: var(--green-dark);
     transform: translate(10rem, 10rem);
 }
 
 .orbit li:nth-child(3) {
-    --icon-bg: var(--pink-light);
-    --text-bg: var(--pink-dark);
     transform: translate(0, 15rem);
 }
 
 .orbit li:nth-child(4) {
-    --icon-bg: var(--red-light);
-    --text-bg: var(--red-dark);
     transform: translate(-10rem, 10rem);
 }
 
 .orbit li:nth-child(5) {
-    --icon-bg: var(--brown-light);
-    --text-bg: var(--brown-dark);
     transform: translate(-15rem, 0rem);
 }
 
 .orbit li:nth-child(6) {
-    --icon-bg: var(--yellow-light);
-    --text-bg: var(--yellow-dark);
     transform: translate(-10rem, -10rem);
 }
 
 .orbit li:nth-child(7) {
-    --icon-bg: var(--purple-light);
-    --text-bg: var(--purple-dark);
     transform: translate(0, -15rem);
 }
 
 .orbit li:nth-child(8) {
-    --icon-bg: var(--orange-light);
-    --text-bg: var(--orange-dark);
     transform: translate(10rem, -10rem);
 }
 
