"Fixed animation for all browser"

--- a/src/pages/client.css
+++ b/src/pages/client.css
@@ -263,13 +263,13 @@ picture {
 
 @keyframes orbit {
     100% {
-        rotate: 1turn;
+     -webkit-transform: rotate(1turn);
     }
 }
 
 @keyframes hold-position {
     100% {
-        rotate: -1turn;
+        -webkit-transform: rotate(-1turn);
     }
 }
 
