--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -77,6 +77,8 @@ ol[role="list"] {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  
 }
 .active,
 .card-header:hover {
@@ -85,4 +87,12 @@ ol[role="list"] {
 
 .card.accordion-active .card-body {
   max-height: 300px;
+}
+
+
+@media screen and (min-width: 90px) and (max-width: 991px) {
+  .card-header {
+
+     font-size: 20px;
+  }
 }
